# ai-translation

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DESIGN-agent.md  DESIGN-knowledge.md  DESIGN-rag.md  Dockerfile  PLAN-rag-pipeline.md  README.md  acadia-50-sentences.en.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: agents  skills
.kiro/agents/: translation-lang-worker.json  translation-lang-worker.md  translation-reviewer.json  translation-reviewer.md
.kiro/commands/: translate.md
.kiro/skills/: translate  translate-analyze  translate-cycle-check  translate-docx  translate-edit  translate-glossary  translate-md  translate-resolve-terms  translate-srt  translate-translate  translate-txt  translate-xlsx
examples/: acadia-50-sentences.en.vi.md  audi-sensor-procedures.de.md  audi-sensor-procedures.es.de.md  audi-sensor-procedures.es.md
scripts/: install.sh
src/agents/: translation-lang-worker.md  translation-reviewer.md
src/claude/agents/: translation-lang-worker.md  translation-reviewer.md
src/clis/: __init__.py  _shared.py  install.py  kb.py  main.py  metrics.py  run.py
src/knowledge/: README.md  __init__.py
src/knowledge/cli/: __init__.py  main.py
src/knowledge/core/: __init__.py  chunker.py  embedder.py  entities.py  glossary.py  indexer.py  languages.py  models.py  retrieval.py  store.py  sync.py  vault.py
src/metrics/: __init__.py  checks.py  lang_checks.py  ports.py  profile_registry.py  registry.py  roundtrip.py  similarity.py  vault_loader.py
src/rag/: __init__.py  router.py
src/rag/adapters/: __init__.py
src/rag/domain/: __init__.py  analysis.py  flags.py  glossary.py  review.py  run.py  units.py
src/rag/frameworks/: __init__.py  api.py  (+1 more)
tests/: fakes.py  test_api.py  test_back_translate.py  test_build_glossary.py  test_chunker.py  test_cli.py  test_custom_checks.py  test_document_adapters.py  test_flag_parser.py  test_indexer.py  test_metric_profiles.py  test_mode_select.py  test_pipeline_glossary.py  test_pipeline_repair.py  test_pipeline_review.py  test_pipeline_roundtrip.py  test_repair_chunk.py  test_retrieval.py  test_review_chunk.py  test_roundtrip.py  test_roundtrip_profile.py  test_similarity.py  test_simple_mode.py  test_term_cache.py  test_translate_chunk.py  test_vault.py
vault/: INDEX.md
vault/examples/: INDEX.md
vault/glossary/: INDEX.md
(+77 files in other folders)
