[project]
name = "ai-translation-knowledge"
version = "0.1.0"
description = "Shared knowledge base (vault + vector DB + retrieval API) for the AI translation system."
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "pyyaml>=6.0",
    "python-frontmatter>=1.1",
    "markdown-it-py>=3.0",
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
]

[project.optional-dependencies]
openai = ["openai>=1.40"]
extract = [
    "pypdf>=4.0",
    "python-docx>=1.1",
    "beautifulsoup4>=4.12",
]
rag = [
    "claude-agent-sdk>=0.1",
    "python-docx>=1.1",
    "openpyxl>=3.1",
    "pysrt>=1.1",
]
azure-openai = ["openai>=1.40"]
gemini = ["google-genai>=0.8"]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
kb = "knowledge.cli.main:main"
translate = "rag.frameworks.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/knowledge", "src/rag"]

[tool.ruff]
line-length = 100
target-version = "py311"
